--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <title>CALCULADORA DE HIDRATACION BASAL</title>
+        <link rel="stylesheet" href="./style.css"/>
         <body>
-            <div>
-                <div>
+            <div id="contenedor">
+                <div id="CALCULADORA">
+                    <div>
                 <h1>CALCULADORA BASAL </h1> 
                 <input type="number" placeholder="Ingrese su peso en kg"/>
                 <button>CALCULAR</button>
+                <p>71cc/h</p>
+                <p> m+m/2: 105cc/h</p>
+                    </div>
+                </div>
+            </div>  
+            <div id="detalle">
+                <div>
             <h1> ¿Cómo se calcula?</h1>
-            <ul>
-                <li> Linea 1</li>
-                <li> Linea 2</li>
-                <li> Linea 3</li>
-            </ul>
+                <ul>
+                <li> De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
+                <li> Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg.</li>
+                <li> De 20kg para arriba, se suman 20cc por cada kilo adicional</li>
+                </ul>
                 </div>
              </div>
         </body>
